# FreeNet

./: CMakeLists.txt  README.md
client/: gui.cpp  gui.h  main.cpp  network.cpp
common/: message.h  protocol.h
server/: client_handler.cpp  main.cpp  server.cpp  server.h
